# serial_com_rust

./: .gitignore  .pre-commit-config.yaml  Cargo.toml
src/: binarycom.rs  circbuf.rs  cobs.rs  cobs_redo.rs  crc.rs  error.rs  lib.rs  main.rs
src/binarycom/: app.rs  hostreceiver.rs  mod.rs  packers.rs
