[package]
name = "serial_com_rust"
version = "0.1.0"
authors = ["Justin Hugon <jhugon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arraydeque = { version= "0.4.5", default-features = false }
